--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -2,3 +2,29 @@
 #
 # Documentation for this file format can be found in "The Data Catalog"
 # Link: https://docs.kedro.org/en/stable/data/data_catalog.html
+
+# Cyberpunk 2077 Transcript Dataset
+cyberpunk_transcript:
+  type: text.TextDataset
+  filepath: data/transcript/Cyberpunk2077Transcript.txt
+
+# Processed transcript data
+transcript_chunks:
+  type: json.JSONDataset
+  filepath: data/processed/transcript_chunks.json
+
+character_list:
+  type: json.JSONDataset
+  filepath: data/processed/character_list.json
+
+transcript_index:
+  type: json.JSONDataset
+  filepath: data/processed/transcript_index.json
+
+# Prompt template loaded with LangChainPromptDataset
+query_prompt:
+  type: 2077_langchain_test.datasets.langchain_prompt_dataset.LangChainPromptDataset
+  filepath: data/prompts/query_prompt.txt
+  template: PromptTemplate
+  dataset:
+    type: text.TextDataset
