--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 requires-python = ">=3.9"
-name = "2077_langchain_test"
+name = "kedro_2077"
 readme = "README.md"
 dynamic = [ "version",]
 dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]
 
 [project.scripts]
-2077-langchain-test = "2077_langchain_test.__main__:main"
+kedro-2077 = "kedro_2077.__main__:main"
 
 [tool.kedro]
-package_name = "2077_langchain_test"
-project_name = "2077 LangChain Test"
+package_name = "kedro_2077"
+project_name = "Kedro 2077"
 kedro_init_version = "1.0.0"
 tools = "['None']"
 example_pipeline = "False"
@@ -23,7 +23,7 @@ source_dir = "src"
 [project.entry-points."kedro.hooks"]
 
 [tool.setuptools.dynamic.version]
-attr = "2077_langchain_test.__version__"
+attr = "kedro_2077.__version__"
 
 [tool.setuptools.packages.find]
 where = [ "src",]
